--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,8 @@ addons:
             #
             - libgtk-3-dev
             - libappindicator3-dev
+            - xvfb
+            - xauth
 go:
   - 1.13.x
   - 1.12.x
@@ -37,6 +39,9 @@ go:
 # services:
 #   - docker
 before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  #
   - cd $HOME
   - mv $GOPATH/src/github.com/NaniteFactory $GOPATH/src/github.com/nanitefactory # lowercase 
   - cd $GOPATH/src/github.com/nanitefactory/visual
