--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,8 @@ addons:
             #
             - libgtk-3-dev
             - libappindicator3-dev
-            - xvfb
-            - xauth
+services:
+  - xvfb
 go:
   - 1.13.x
   - 1.12.x
